testsuite/tests/typing-extension-constructor/test.ocaml.reference
type t = ..
type t += A
- : extension_constructor = <abstr>
Line 4, characters 0-6:
4 | module M = struct
    ^^^^^^
Error: Syntax error


Line 3, characters 0-0:
Error: Syntax error

